# devPlan

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  智能定制_sprint3_20260116_迭代计划 (1).xlsx
.github/workflows/: release.yml
docs/: advance.md  architecture.md  changelog.md  file-inventory.md  require.md  task-phases.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: batch_commands.rs  calendar_commands.rs  developer_commands.rs  excel_commands.rs  llm_commands.rs  mod.rs  settings_commands.rs  sprint_commands.rs  standup_commands.rs  task_commands.rs
src-tauri/src/db/: developer_repo.rs  init.rs  mod.rs  settings_repo.rs  sprint_repo.rs  standup_repo.rs  task_repo.rs
src-tauri/src/excel/: column_definitions.rs  mod.rs  reader.rs  smart_matcher.rs  writer.rs
src-tauri/src/llm/: adapter.rs  mod.rs  openai_adapter.rs
src-tauri/src/models/: batch.rs  calendar.rs  developer.rs  enums.rs  mod.rs  settings.rs  sprint.rs  standup.rs  task.rs
src-tauri/src/services/: developer_service.rs  holiday_service.rs  import_export_service.rs  llm_service.rs  mod.rs  schedule_service.rs  settings_service.rs  standup_service.rs  task_service.rs
src/components/calendar/: CalendarView.tsx  (+3 more)
src/hooks/: useWorkdayStatus.ts
src/lib/: api.ts  formatHours.ts  types.ts
src/stores/: chatStore.ts  developerStore.ts  settingsStore.ts  sprintStore.ts  standupStore.ts  tabStore.ts  taskDetailStore.ts  taskStore.ts
tests/: standup-markdown.spec.ts
(+25 files in other folders)
