[package]
name = "devplan"
version = "0.1.0"
description = "DevPlan - 开发项目管理本地客户端"
authors = ["DevPlan Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
calamine = "0.25"
rust_xlsxwriter = "0.79"
jieba-rs = "0.7"
strsim = "0.11"
ureq = { version = "2", features = ["json"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
